*6742* Introduced fbvFormButtons to be used to construct standardized form cancel/submit buttons.  Made ambiguous form div selector select form sections.

--- a/styles/form.less
+++ b/styles/form.less
@@ -28,7 +28,7 @@
 		font-size: 110%;
 	}
 
-	div {
+	div.section {
 		clear: left;
 		margin-bottom: 15px;
 	}
@@ -218,5 +218,23 @@
 	}
 	.pkp_form_hidden {
 		display:none !important;
+	}
+
+	.formButtons {
+	    line-height: 30px;
+		margin: 0 0 15px;
+		overflow: hidden;
+		padding: 0 20px;
+		vertical-align: middle;
+
+		.submitFormButton {
+			float: right;
+		}
+		.cancelFormButton {
+			float: left
+		}
+		div.clear {
+			clear: both;
+		}
 	}
 }
